--- a/source/mainStyle.css
+++ b/source/mainStyle.css
@@ -76,28 +76,28 @@ body {
 /*Pages*/
 
 #habitaciones {
-    background-image:url('http://imagizer.imageshack.us/a/img538/3939/jMBrid.jpg');
+    background-image:url('mediopelo.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
 }
 
 #sum {
-    background-image:url('http://imagizer.imageshack.us/a/img540/1671/ZJfQQ6.jpg');
+    background-image:url('mediopelo.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
 }
 
 #ubicacion {
-    background-image:url('http://imagizer.imageshack.us/a/img537/4775/4Yv10i.jpg');
+    background-image:url('mediopelo.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
 }
 
 #contacto {
-    background-image:url('http://imagizer.imageshack.us/a/img537/1778/fkw9yh.jpg');
+    background-image:url('mediopelo.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
@@ -112,7 +112,7 @@ body {
 
 #servicios {
     height: 100%;
-    background-image: url('http://imagizer.imageshack.us/a/img540/6527/umHChw.jpg');
+    background-image: url('mediopelo.jpeg');
     background-repeat: no-repeat;
     background-size: 100%;
     background-position-y: -100px;
@@ -120,7 +120,7 @@ body {
 
 #clientes {
     height: 100%;
-    background-image: url('http://imagizer.imageshack.us/a/img633/8409/E7BmF6.jpg');
+    background-image: url('mediopelo.jpeg');
     background-repeat: no-repeat;
     background-size: 100%;
     background-position-y: -100px;
