--- a/source/mainStyle.css
+++ b/source/mainStyle.css
@@ -258,6 +258,41 @@ body {
     margin: auto;
 }
 
+.contenidoEvents {
+    width: 850px;
+    height: 550px;
+    background-color: #bbbcbc;
+    opacity: 0.8;
+    position: absolute;
+    top:-150px;
+    left:0;
+    right:0;
+    bottom:0;
+    margin: auto;
+    overflow-y: scroll;
+}
+
+.publicacionEvents {
+    width: 80%;
+    height: 100%;
+    position: relative;
+    left:20px;
+    right:20px;
+    bottom:100px;
+    margin: auto;
+}
+
+.publicacionEvents img {
+    height: 70%;
+    width: 70%;
+    position: relative;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin: auto;
+}
+
 .contenidoRadio {
     width: 950px;
     height: 380px;
